// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Description > description list with a single term 1`] = `
<DocumentFragment>
  <dl
    role="list"
  >
    <dt
      class="py-2 text-sm font-semibold"
      role="listitem"
    >
      Name
    </dt>
    <dd
      class="text-base [&:not(:last-child)]:mb-1"
    >
      Evelyn Gilts
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description > description list with multiple terms 1`] = `
<DocumentFragment>
  <dl
    role="list"
  >
    <dt
      class="py-2 text-sm font-semibold"
      role="listitem"
    >
      Name
    </dt>
    <dd
      class="text-base [&:not(:last-child)]:mb-1"
    >
      Evelyn Gilts
    </dd>
    <dt
      class="py-2 text-sm font-semibold"
      role="listitem"
    >
      Age
    </dt>
    <dd
      class="text-base [&:not(:last-child)]:mb-1"
    >
      23
    </dd>
    <dt
      class="py-2 text-sm font-semibold"
      role="listitem"
    >
      Profession
    </dt>
    <dd
      class="text-base [&:not(:last-child)]:mb-1"
    >
      AI Specialist
    </dd>
  </dl>
</DocumentFragment>
`;
